# Stratiflow

./: Adjoint.cpp  Arnoldi.h  BasicNewtonKrylov.h  Benchmark.cpp  CMakeLists.txt  Constants.h  ConstrainedPoints.cpp  DAL.cpp  DALSteady.cpp  DNS.cpp  Differentiation.cpp  Differentiation.h  Direct.cpp  Eigen.h  ExtendedStateVector.h  FFT.cpp  FFT.h  Field.cpp  Field.h  FieldNorm.cpp  FieldNorms.cpp  FindCriticalPoint.cpp  FindFold.cpp  FindHopf.cpp  FindPeriodic.cpp  FindPitchfork.cpp  FullState.cpp  FullState.h  Graph.h  HopfBifurcation.h  IMEXRK.cpp  IMEXRK.h  Integration.cpp  Integration.h  InverseIteration.cpp  LargestGrowth.cpp  NewtonKrylov.cpp  NewtonKrylov.h  OSUtils.cpp  OSUtils.h  (+25 more)
images/buoyancy_old/: output.avi
tests/: CMakeLists.txt  DifferentiationTests.cpp  FieldTests.cpp  IntegrationTests.cpp  Tests.cpp
